made fixed body on mobile menu and search activity

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -17,6 +17,10 @@ body
 		// top: 0
 		// left: 0
 		// width: 100%
+	&.is-fixed
+		position: fixed
+		left: 0
+		top: 0
 
 // .loader
 // 	display: none
